نوشتن professoreview api + courseview api +student api view

--- a/users/templates/users/admin.html
+++ b/users/templates/users/admin.html
@@ -162,11 +162,18 @@
               <label for="professor_name">:نام استاد</label>
               <input type="text" id="professor_name" placeholder="نام استاد را وارد کنید">
             </div>
+
+            
             <!-- ایمیل استاد -->
             <div>
               <label for="professor_email">:ایمیل استاد</label>
               <input type="email" id="professor_email" class="time-box" placeholder="ایمیل استاد را وارد کنید" required>
             </div>
+          </div>
+           <!-- فیلد بولین -->
+          <div>
+            <label for="is_professor">مدیر گروه؟</label>
+            <input type="checkbox" id="is_professor">
           </div>
         </div>
         <div class="button-container">
@@ -275,6 +282,10 @@
               <label for="student_major">:رشته تحصیلی</label>
               <input type="text" id="student_major" class="time-box" placeholder="رشته تحصیلی را وارد کنید">
             </div>
+          </div>
+          <div>
+            <label for="is_professor">مدیر گروه؟</label>
+            <input type="checkbox" id="is_professor">
           </div>
         </div>
         <div class="button-container">
